--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
+    "@types/react-table": "^7.7.14",
     "axios": "^1.3.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
@@ -21,10 +22,13 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-table": "^7.8.0",
     "styled-components": "^5.3.9",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-query": "^1.2.9",
     "@types/styled-components": "^5.1.26"
   }
 }
